--- a/portfolio2.0/package.json
+++ b/portfolio2.0/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "emailjs": "^4.0.3",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
