--- a/portfolio2.0/package.json
+++ b/portfolio2.0/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@vercel/analytics": "^1.1.1",
     "emailjs": "^4.0.3",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
