--- a/portfolio2.0/package.json
+++ b/portfolio2.0/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.1",
     "emailjs": "^4.0.3",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
