--- a/portfolio2.0/package.json
+++ b/portfolio2.0/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
     "react-scroll": "^1.9.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "vercel": "^33.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
