--- a/portfolio2.0/package.json
+++ b/portfolio2.0/package.json
@@ -14,10 +14,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "emailjs": "^4.0.3",
+    "embla-carousel-react": "^8.0.0",
     "framer-motion": "^10.16.4",
+    "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -25,9 +31,13 @@
     "react-intersection-observer": "^9.5.2",
     "react-scroll": "^1.9.0",
     "react-toastify": "^9.1.3",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0",
     "vercel": "^33.5.2"
   },
   "devDependencies": {
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-scroll": "^1.8.10",
